--- a/style.css
+++ b/style.css
@@ -2,82 +2,186 @@
   margin: 0;
   padding: 0;
 }
-.section {
-  max-width: 95%;
-  margin: 20px auto;
-  height: 600px;
-  background-color: blue;
+.nav {
+  width: 100%;
+  margin: 5px 0;
 }
-#contener {
-  max-width: 55%;
-  margin: 50px auto;
+.nav h6 {
+  display: inline-block;
+  font-family: sans-serif;
+  padding: 10px 20px;
+  margin: 8px auto;
+  color: #555;
+  text-align: center;
 }
-.patrol {
-  max-width: 40%;
-  width: 300px;
-  height: 400px;
-  background: linear-gradient(rgb(1, 1, 78), rgb(4, 4, 182));
-  margin-top: 85px;
-  border-radius: 10px 0 0 10px;
-  box-shadow: 0px 5px 10px #333;
-  float: left;
+.nav a:nth-child(1) {
+  margin-left: 430px;
+}
+.nav h6:hover {
+  cursor: pointer;
+  color: coral;
+}
+.bangla {
+  width: 65px;
+  height: 50px;
+  background-color: rgb(212, 209, 209);
+  display: inline-block;
+  position: absolute;
+  text-align: center;
+}
+.bangla a h6 {
+  padding: 0px;
+  margin: 0;
 }
 
-.patrol h1 {
-  color: white;
+.bangla span {
+  color: coral;
+  font-family: inherit;
+  font-size: 32px;
   text-align: center;
+}
+.nav a:nth-child(4) {
+  margin-left: 68px;
+}
+
+.section img {
+  width: 99%;
+  height: 570px;
+  margin-left: 8px;
+  position: relative;
+}
+.rectengel {
+  width: 99%;
+  height: 570px;
+  margin-left: 8px;
+  position: absolute;
+  margin-top: -575px;
+  background-color: rgba(0, 0, 0, 0.55);
+}
+.sar {
+  margin-left: 470px;
   font-family: sans-serif;
-  border: 1px solid #fff;
-  padding: 20px 5px;
-  margin: 60px;
-  margin-top: 150px;
+  margin-top: -400px;
+  position: absolute;
+}
+.sar h1 {
+  color: #fff;
+  text-align: center;
+  font-size: 35px;
+}
+.sar button {
+  margin: 30px 100px;
+  padding: 12px 20px;
+  background-color: rgb(65, 141, 98);
+  color: #fff;
+  border: none;
   border-radius: 5px;
 }
-.myform,
-.myform1 {
-  max-width: 60%;
-  background-color: white;
-  padding: 76.5px;
-  margin-top: 85px;
-  border-radius: 0 10px 10px 0;
-  box-shadow: 5px 5px 10px #333;
-  float: right;
+.sar button:hover {
+  background-color: rgb(187, 186, 186);
+  color: #000;
 }
-.myform input,
-.myform1 input {
-  margin: 10px 0;
-  padding: 5px 100px 5px 0;
-  border: none;
-  border-bottom: 1px solid #555;
-}
-.myform button,
-.myform1 button {
-  background: linear-gradient(blue, rgb(2, 2, 146));
-  color: #fff;
-  padding: 15px 30px;
-  width: 70%;
-  border: none;
-  border-radius: 10px;
-  margin-top: 30px;
-  margin-left: 40px;
-}
-.myform p,
-.myform1 p {
-  margin-top: 10px;
+section p:nth-child(1) {
   text-align: center;
+  font-size: 32px;
+  padding-top: 15px;
+  font-family: sans-serif;
 }
-.myform1 {
-  border-radius: 15px;
-  margin-right: 400px;
+.contener {
+  width: 30%;
+  height: 350px;
+  background-color: rgb(212, 209, 209);
+  border-radius: 10px;
+  margin: 15px;
+  display: inline-block;
+  box-shadow: 5px 5px 5px #555;
 }
-.myform1 h1 {
+
+.contener img {
+  width: 45%;
+  height: 165px;
+  margin: 40px 0px 10px 100px;
+  border-radius: 200px;
+}
+.contener p {
+  font-family: sans-serif;
+  padding: 0 15px;
+  color: #555;
+}
+.contener h2 {
   font-family: sans-serif;
   text-align: center;
-  margin: 40px auto;
-  margin-top: -40px;
-  border-radius: 15px;
+  padding: 10px 0;
+  color: #555;
 }
-.myform1 button {
+#contener0 {
+  margin-left: 15px;
+  display: inline;
+}
+.section2 img {
   width: 100%;
-  margin-left: 0;
+  height: 60%;
+  margin: 0;
+  border-radius: 0px;
+}
+.section3 .contener {
+  border-radius: 0;
+  width: 49.2%;
+  margin: 0;
+  padding: 0;
+  box-shadow: none;
+  background-color: rgb(252, 249, 249);
+  margin-top: 10px;
+}
+.section3 .contener img {
+  width: 22%;
+  height: 145px;
+  margin-left: 260px;
+}
+.section3 p {
+  text-align: center;
+  color: rgb(94, 143, 2);
+}
+.section3 .contener h2:nth-child(2) {
+  color: rgb(94, 143, 2);
+}
+.section3 p:first-child {
+  color: #000;
+}
+.ellips {
+  width: 13px;
+  height: 13px;
+  background-color: rgb(94, 143, 2);
+  border-radius: 100px;
+  display: inline-block;
+  margin: 10px 1px;
+}
+.more .ellips:first-child {
+  margin-left: 655px;
+}
+.more .ellips:nth-child(2) {
+  border: 1px solid #555;
+}
+.footer {
+  width: 100%;
+  height: 90px;
+  background-color: rgb(187, 186, 186);
+  margin-bottom: 0;
+}
+.footer span {
+  text-align: center;
+  font-size: 32px;
+  font-weight: bold;
+  font-family: sans-serif;
+  color: coral;
+  margin-left: 670px;
+}
+.footer p:nth-child(2) {
+  color: #555;
+  font-weight: normal;
+  font-family: sans-serif;
+}
+.footer p:nth-child(3) {
+  color: #777;
+  font-family: sans-serif;
 }
